--- a/src/components/Nav.module.css
+++ b/src/components/Nav.module.css
@@ -6,6 +6,7 @@
 .nav .list_nav {
     display: flex;
     justify-content: right;
+    align-items: center;
     gap: 16px;
 }
 
@@ -18,4 +19,13 @@
     margin-left: 16px;
     color: #fff;
     text-decoration: none;
+}
+
+.nav button {
+    padding: 6px 12px;
+    border-radius: 10px;
+    background-color: teal;
+    border: none;
+    color: #fff;
+    cursor: pointer;
 }
